feat: reactive database with panache
Signed-off-by: fredsonchaves07 <fredsonchaves07@gmail.com>